# tsauditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: README.md  build_new_features_notebook.py  new_features_walkthrough.ipynb
examples/beyond_price_direction/: README.md  beyond_price_direction.ipynb  build_beyond_notebook.py
examples/ogdc_leakage_case/: build_ogdc_notebook.py  compare_leakage.py  ogdc_leakage.ipynb
examples/sensor-example/: report_pdf_demo.py  sensor_example.ipynb
examples/timesfm_adapter/: README.md  build_timesfm_notebook.py  timesfm_adapter.ipynb
examples/validation_comparison/: build_validation_notebook.py  time_series_validation_vs_general_profiling.ipynb
tests/: test_adapters.py  test_asof.py  test_contextual.py  test_correlation.py  test_equivalence.py  test_fix.py  test_health.py  test_missing.py  test_pdf.py  test_pickle.py  test_point.py  test_polars.py  test_remediation.py  test_scaffold.py  test_stationarity.py  test_temporal.py  test_validity.py
tsauditor/: __init__.py  remediate.py  scanner.py  validity.py
tsauditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tsauditor/adapters/: __init__.py  timesfm.py
tsauditor/anomaly/: contextual.py  point.py
tsauditor/leakage/: __init__.py  asof.py  correlation.py  equivalence.py  temporal.py
tsauditor/profiler/: missing.py  stationarity.py
tsauditor/report/: pdf.py  remediation.py  summary.py
tsauditor/utils/: validation.py
wiki/: API-Reference.md  Home.md  Installation.md  Issue-code-reference.md  Quickstart.md
