[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsauditor"
version = "0.2.0"
description = "A data quality auditing library for time-series tabular data in financial and sensor domains."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Iman", email = "parrisanaeem67@gmail.com" }]
requires-python = ">=3.9"
keywords = ["time-series", "data-quality", "leakage-detection", "finance", "sensor", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5,<3",
    "numpy>=1.23,<3",
    "scipy>=1.9,<2",
    "statsmodels>=0.13,<1",
    "rich>=13.0,<16",
]

[project.urls]
Homepage = "https://github.com/imann128/tsauditor"
Repository = "https://github.com/imann128/tsauditor"
Documentation = "https://github.com/imann128/tsauditor/wiki"
Changelog = "https://github.com/imann128/tsauditor/blob/main/CHANGELOG.md"
Issues = "https://github.com/imann128/tsauditor/issues"

[project.optional-dependencies]
pdf = [
    "matplotlib>=3.5,<4",
]
polars = [
    "polars>=0.20",
    "pyarrow>=12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff==0.15.18",
    "matplotlib>=3.5,<4",
    "polars>=0.20",
    "pyarrow>=12",
    "joblib>=1.2",
]
examples = [
    "scikit-learn>=1.0",
    "jupyter",
    "matplotlib>=3.5,<4",
    "nbclient>=0.7",
    "nbformat>=5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsauditor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.coverage.run]
source = ["tsauditor"]
omit = [
    "tsauditor/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
